testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_single_line_string/case4.expect.out
error: unterminated string interpolation
  ==> case4.cj:15:15:
   | 
15 |     interpolation${
   |                  ^^^ unterminated string interpolation
   | 

1 error generated, 1 error printed.
